--- a/Web/CounterPicker.Web/CounterPicker.Web.csproj
+++ b/Web/CounterPicker.Web/CounterPicker.Web.csproj
@@ -279,6 +279,7 @@
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
     <Content Include="Views\Home\Hero.cshtml" />
     <Content Include="Views\Heroes\Index.cshtml" />
+    <Content Include="Views\Heroes\Hero.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
